--- a/.env.local.example
+++ b/.env.local.example
@@ -1,10 +1,5 @@
-# Supabase
-NEXT_PUBLIC_SUPABASE_URL=https://[SUPABASE_PROJECT_ID].supabase.co
-NEXT_PUBLIC_SUPABASE_ANON_KEY=[SUPABASE_ANON_KEY]
-SUPABASE_SERVICE_ROLE_KEY=[SUPABASE_SERVICE_ROLE_KEY]
-
-# WhatsApp
+NEXT_PUBLIC_SUPABASE_URL=your_supabase_url
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your_anon_key
+SUPABASE_SERVICE_ROLE_KEY=your_service_role_key
 NEXT_PUBLIC_WHATSAPP_NUMBER=5511999999999
-
-# App
-NEXT_PUBLIC_APP_URL=http://localhost:3000
+NEXT_PUBLIC_APP_URL=https://your-domain.com
