--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "dependencies": {
         "@hookform/resolvers": "^3.10.0",
         "@supabase/ssr": "^0.5.2",
-        "@supabase/supabase-js": "^2.45.0",
+        "@supabase/supabase-js": "^2.95.3",
         "clsx": "^2.1.1",
         "date-fns": "^3.6.0",
+        "dotenv": "^17.3.1",
         "gsap": "^3.14.2",
         "lucide-react": "^0.447.0",
         "next": "^14.2.0",
