--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "eslint": "^8.57.0",
         "eslint-config-next": "^14.2.0",
         "postcss": "^8.4.47",
+        "sharp": "^0.34.5",
         "tailwindcss": "^3.4.0",
         "typescript": "^5.6.0"
     }
